docs: enable markdown doclet
remove shared resources